--- a/fluttergetx/pubspec.yaml
+++ b/fluttergetx/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.3.8
   http: ^0.13.4
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
@@ -25,5 +26,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-assets:
+  assets:
+    - assets/main.png
+    - assets/main2.jpg
+    - assets/sd.webp
   
